--- a/sass/style.scss
+++ b/sass/style.scss
@@ -80,3 +80,16 @@ body {
         transition: opacity 0.5s ease-in-out;
       }
   }
+  .educational {
+    margin-top: 20px;
+  
+    h2 {
+      color: #333;
+    }
+  
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+      color: #555;
+    }
+  }
